[verification] Introduce rally verify show-verifier command
We have a lot of information about verifiers and main horizontal table from
``rally verify list-verifiers`` command could not include all of it.

Co-Authored-By: Yaroslav Lobankov <ylobankov@mirantis.com>

Change-Id: If425e9c373483fa092ebbcefdaf9a46173275c8a

--- a/rally/ui/templates/ci/index_verify.html
+++ b/rally/ui/templates/ci/index_verify.html
@@ -44,6 +44,9 @@
     <span class="{{ create_verifier.status }}">[{{ create_verifier.status }}]</span>
     <a href="{{ create_verifier.stdout_file }}">Create a verifier</a>
     <code>$ {{ create_verifier.cmd }}</code>
+    <span class="{{ show_verifier.status }}">[{{ show_verifier.status }}]</span>
+    <a href="{{ show_verifier.stdout_file }}">Show the verifier</a>
+    <code>$ {{ show_verifier.cmd }}</code>
     <span class="{{ list_verifiers.status }}">[{{ list_verifiers.status }}]</span>
     <a href="{{ list_verifiers.stdout_file }}">List verifiers</a>
     <code>$ {{ list_verifiers.cmd }}</code>
